# atcoder

./: .clang-format  .gitignore  AGENTS.md  README.md  gcd_lcm.cpp  graph.cpp  mkgitignore.sh  mod.cpp  perm_comb.cpp  prime.cpp  segment_tree.cpp  template.cpp  text.txt  unionfind.cpp
ABC128/: C.rb
ABC129/: A.cpp  C.cpp  D_WA.cpp
ABC130/: B.cpp  C.cpp  D.cpp
ABC131/: A.cpp  D.cpp
ABC132/: A.cpp  C.cpp  D.cpp  E.cpp
ABC133/: B.cpp  D.cpp
ABC134/: A.cpp  C.cpp  D.cpp
ABC135/: a.cpp  c.cpp
ABC136/: B.cpp  C.cpp  D.cpp  F.cpp
ABC137/: C.cpp
ABC138/: A.cpp  B.cpp  C.cpp  D.cpp
ABC139/: C.cpp
ABC140/: A.cpp  D.cpp
ABC141/: A.cpp  B.cpp  C.cpp  E.cpp
ABC142/: A.cpp  C.cpp  E.cpp
ABC143/: D.cpp
ABC144/: A.cpp  B.cpp  D.cpp
ABC145/: D.cpp  D2.cpp  E.cpp
ABC146/: B.cpp  D.cpp
ABC147/: C.cpp  D.cpp
AOJ/: RMQ.cpp
AOJ/CGL/: CGL_1_A.cpp
AOJ/DPL/: DPL_1_D.cpp
AOJ/DSL/: DSL_1_A.cpp  DSL_1_B.cpp  RAQ.cpp  RMQ_and_RUQ.cpp  RSQ.cpp  RSQ_and_RAQ.cpp  RUQ.cpp
AOJ/GRL/: GRL_1_A.cpp  GRL_1_C.cpp  GRL_2_A.cpp
AtCoder-rs/: template.rs
AtCoder-rs/abc072/: Cargo.toml
AtCoder-rs/abc219/: Cargo.toml
AtCoder-rs/abc220/: Cargo.toml
AtCoder-rs/abc221/: Cargo.toml
AtCoder-rs/abc222/: Cargo.toml
AtCoder-rs/abc223/: Cargo.toml
AtcoderBiginnersSelection/: ABC049C.cpp  ABC081A.cpp  ABC081B.cpp  ABC083B.cpp  ABC085C.cpp  ABC086A.cpp  ABC087B.cpp  PracticeA.cpp
CODEFESTIVAL2015/: C.sh
DDCC2020/: C.cpp
NIKKEI_Programming_Contest_2019-2/: A.cpp  C.cpp
SUMITOMO_MITUI_TRUST/: B.cpp  C.cpp  D.cpp  F.cpp
TypicalDPContest/: A.cpp
(+2013 files in other folders)
